src/antlr_grammar/DartParser.java
// Generated from java-escape by ANTLR 4.11.1
package antlr_grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class DartParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		CLASS=1, OPEN_CLASS=2, LIST=3, LIST_NAME=4, OPEN_LIST=5, WS=6, NEWLINE=7, 
		COMMA=8, CLOSE_LIST=9, LIST_INT=10, INTGER=11, INT_NAME=12, EQUAL=13, 
		PLUS=14, VOID=15, SUM=16, OPEN_B=17, COLSE_B=18, FOR=19, SMALLER=20, DOT=21, 
		LENGTH=22, PRINT=23, SMEI=24, I=25, LETTER=26, CLOSE_CLASS=27;
	public static final int
		RULE_program = 0, RULE_classDeclaration = 1, RULE_classMain = 2, RULE_classHeader = 3, 
		RULE_classBody = 4, RULE_parameterClass = 5, RULE_parameterList = 6, RULE_listbody = 7, 
		RULE_parameterInt = 8, RULE_function = 9, RULE_functionHeader = 10, RULE_functionBody = 11, 
		RULE_conditionFor = 12, RULE_forBody = 13, RULE_print = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "classDeclaration", "classMain", "classHeader", "classBody", 
			"parameterClass", "parameterList", "listbody", "parameterInt", "function", 
			"functionHeader", "functionBody", "conditionFor", "forBody", "print"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'class'", "'{'", "'List'", "'number'", "'['", null, null, "','", 
			"']'", null, "'int'", "'sumNumber'", "'='", "'+'", "'void'", "'sum'", 
			"'('", "')'", "'for'", "'<'", "'.'", "'length'", "'print'", "';'", null, 
			null, "'}'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "CLASS", "OPEN_CLASS", "LIST", "LIST_NAME", "OPEN_LIST", "WS", 
			"NEWLINE", "COMMA", "CLOSE_LIST", "LIST_INT", "INTGER", "INT_NAME", "EQUAL", 
			"PLUS", "VOID", "SUM", "OPEN_B", "COLSE_B", "FOR", "SMALLER", "DOT", 
			"LENGTH", "PRINT", "SMEI", "I", "LETTER", "CLOSE_CLASS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public DartParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(30);
			classDeclaration();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode CLASS() { return getToken(DartParser.CLASS, 0); }
		public ClassMainContext classMain() {
			return getRuleContext(ClassMainContext.class,0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitClassDeclaration(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitClassDeclaration(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_classDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(32);
			match(CLASS);
			setState(33);
			classMain();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassMainContext extends ParserRuleContext {
		public ClassHeaderContext classHeader() {
			return getRuleContext(ClassHeaderContext.class,0);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public ClassMainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classMain; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterClassMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitClassMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitClassMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassMainContext classMain() throws RecognitionException {
		ClassMainContext _localctx = new ClassMainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_classMain);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(35);
			classHeader();
			setState(36);
			classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassHeaderContext extends ParserRuleContext {
		public TerminalNode I() { return getToken(DartParser.I, 0); }
		public ClassHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterClassHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitClassHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitClassHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassHeaderContext classHeader() throws RecognitionException {
		ClassHeaderContext _localctx = new ClassHeaderContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_classHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			match(I);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ClassBodyContext extends ParserRuleContext {
		public TerminalNode OPEN_CLASS() { return getToken(DartParser.OPEN_CLASS, 0); }
		public ParameterClassContext parameterClass() {
			return getRuleContext(ParameterClassContext.class,0);
		}
		public FunctionContext function() {
			return getRuleContext(FunctionContext.class,0);
		}
		public TerminalNode CLOSE_CLASS() { return getToken(DartParser.CLOSE_CLASS, 0); }
		public ClassBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterClassBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitClassBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitClassBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClassBodyContext classBody() throws RecognitionException {
		ClassBodyContext _localctx = new ClassBodyContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(OPEN_CLASS);
			setState(41);
			parameterClass();
			setState(42);
			function();
			setState(43);
			match(CLOSE_CLASS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterClassContext extends ParserRuleContext {
		public ParameterListContext parameterList() {
			return getRuleContext(ParameterListContext.class,0);
		}
		public ParameterIntContext parameterInt() {
			return getRuleContext(ParameterIntContext.class,0);
		}
		public ParameterClassContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterClass; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterParameterClass(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitParameterClass(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitParameterClass(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterClassContext parameterClass() throws RecognitionException {
		ParameterClassContext _localctx = new ParameterClassContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameterClass);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			parameterList();
			setState(46);
			parameterInt();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterListContext extends ParserRuleContext {
		public TerminalNode LIST() { return getToken(DartParser.LIST, 0); }
		public TerminalNode LIST_NAME() { return getToken(DartParser.LIST_NAME, 0); }
		public TerminalNode OPEN_LIST() { return getToken(DartParser.OPEN_LIST, 0); }
		public ListbodyContext listbody() {
			return getRuleContext(ListbodyContext.class,0);
		}
		public TerminalNode CLOSE_LIST() { return getToken(DartParser.CLOSE_LIST, 0); }
		public TerminalNode SMEI() { return getToken(DartParser.SMEI, 0); }
		public ParameterListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterList; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterParameterList(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitParameterList(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitParameterList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterListContext parameterList() throws RecognitionException {
		ParameterListContext _localctx = new ParameterListContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_parameterList);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(48);
			match(LIST);
			setState(49);
			match(LIST_NAME);
			setState(50);
			match(OPEN_LIST);
			setState(51);
			listbody();
			setState(52);
			match(CLOSE_LIST);
			setState(53);
			match(SMEI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ListbodyContext extends ParserRuleContext {
		public List<TerminalNode> LIST_INT() { return getTokens(DartParser.LIST_INT); }
		public TerminalNode LIST_INT(int i) {
			return getToken(DartParser.LIST_INT, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(DartParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(DartParser.COMMA, i);
		}
		public ListbodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_listbody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterListbody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitListbody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitListbody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListbodyContext listbody() throws RecognitionException {
		ListbodyContext _localctx = new ListbodyContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_listbody);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(55);
			match(LIST_INT);
			setState(60);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(56);
				match(COMMA);
				setState(57);
				match(LIST_INT);
				}
				}
				setState(62);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParameterIntContext extends ParserRuleContext {
		public TerminalNode INTGER() { return getToken(DartParser.INTGER, 0); }
		public TerminalNode INT_NAME() { return getToken(DartParser.INT_NAME, 0); }
		public TerminalNode EQUAL() { return getToken(DartParser.EQUAL, 0); }
		public TerminalNode LIST_INT() { return getToken(DartParser.LIST_INT, 0); }
		public TerminalNode SMEI() { return getToken(DartParser.SMEI, 0); }
		public ParameterIntContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameterInt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterParameterInt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitParameterInt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitParameterInt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterIntContext parameterInt() throws RecognitionException {
		ParameterIntContext _localctx = new ParameterIntContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameterInt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			match(INTGER);
			setState(64);
			match(INT_NAME);
			setState(65);
			match(EQUAL);
			setState(66);
			match(LIST_INT);
			setState(67);
			match(SMEI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public FunctionHeaderContext functionHeader() {
			return getRuleContext(FunctionHeaderContext.class,0);
		}
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			functionHeader();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionHeaderContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(DartParser.VOID, 0); }
		public TerminalNode SUM() { return getToken(DartParser.SUM, 0); }
		public TerminalNode OPEN_B() { return getToken(DartParser.OPEN_B, 0); }
		public TerminalNode COLSE_B() { return getToken(DartParser.COLSE_B, 0); }
		public TerminalNode OPEN_CLASS() { return getToken(DartParser.OPEN_CLASS, 0); }
		public FunctionBodyContext functionBody() {
			return getRuleContext(FunctionBodyContext.class,0);
		}
		public PrintContext print() {
			return getRuleContext(PrintContext.class,0);
		}
		public TerminalNode CLOSE_CLASS() { return getToken(DartParser.CLOSE_CLASS, 0); }
		public FunctionHeaderContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionHeader; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterFunctionHeader(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitFunctionHeader(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitFunctionHeader(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionHeaderContext functionHeader() throws RecognitionException {
		FunctionHeaderContext _localctx = new FunctionHeaderContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_functionHeader);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(71);
			match(VOID);
			setState(72);
			match(SUM);
			setState(73);
			match(OPEN_B);
			setState(74);
			match(COLSE_B);
			setState(75);
			match(OPEN_CLASS);
			setState(76);
			functionBody();
			setState(77);
			print();
			setState(78);
			match(CLOSE_CLASS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionBodyContext extends ParserRuleContext {
		public TerminalNode FOR() { return getToken(DartParser.FOR, 0); }
		public TerminalNode OPEN_B() { return getToken(DartParser.OPEN_B, 0); }
		public ConditionForContext conditionFor() {
			return getRuleContext(ConditionForContext.class,0);
		}
		public TerminalNode COLSE_B() { return getToken(DartParser.COLSE_B, 0); }
		public TerminalNode OPEN_CLASS() { return getToken(DartParser.OPEN_CLASS, 0); }
		public ForBodyContext forBody() {
			return getRuleContext(ForBodyContext.class,0);
		}
		public TerminalNode CLOSE_CLASS() { return getToken(DartParser.CLOSE_CLASS, 0); }
		public FunctionBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterFunctionBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitFunctionBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitFunctionBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionBodyContext functionBody() throws RecognitionException {
		FunctionBodyContext _localctx = new FunctionBodyContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_functionBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(80);
			match(FOR);
			setState(81);
			match(OPEN_B);
			setState(82);
			conditionFor();
			setState(83);
			match(COLSE_B);
			setState(84);
			match(OPEN_CLASS);
			setState(85);
			forBody();
			setState(86);
			match(CLOSE_CLASS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ConditionForContext extends ParserRuleContext {
		public TerminalNode INTGER() { return getToken(DartParser.INTGER, 0); }
		public List<TerminalNode> I() { return getTokens(DartParser.I); }
		public TerminalNode I(int i) {
			return getToken(DartParser.I, i);
		}
		public TerminalNode EQUAL() { return getToken(DartParser.EQUAL, 0); }
		public TerminalNode LIST_INT() { return getToken(DartParser.LIST_INT, 0); }
		public List<TerminalNode> SMEI() { return getTokens(DartParser.SMEI); }
		public TerminalNode SMEI(int i) {
			return getToken(DartParser.SMEI, i);
		}
		public TerminalNode SMALLER() { return getToken(DartParser.SMALLER, 0); }
		public TerminalNode LIST_NAME() { return getToken(DartParser.LIST_NAME, 0); }
		public TerminalNode DOT() { return getToken(DartParser.DOT, 0); }
		public TerminalNode LENGTH() { return getToken(DartParser.LENGTH, 0); }
		public List<TerminalNode> PLUS() { return getTokens(DartParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(DartParser.PLUS, i);
		}
		public ConditionForContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditionFor; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterConditionFor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitConditionFor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitConditionFor(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ConditionForContext conditionFor() throws RecognitionException {
		ConditionForContext _localctx = new ConditionForContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_conditionFor);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(88);
			match(INTGER);
			setState(89);
			match(I);
			setState(90);
			match(EQUAL);
			setState(91);
			match(LIST_INT);
			setState(92);
			match(SMEI);
			setState(93);
			match(I);
			setState(94);
			match(SMALLER);
			setState(95);
			match(LIST_NAME);
			setState(96);
			match(DOT);
			setState(97);
			match(LENGTH);
			setState(98);
			match(SMEI);
			setState(99);
			match(I);
			setState(100);
			match(PLUS);
			setState(101);
			match(PLUS);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ForBodyContext extends ParserRuleContext {
		public List<TerminalNode> INT_NAME() { return getTokens(DartParser.INT_NAME); }
		public TerminalNode INT_NAME(int i) {
			return getToken(DartParser.INT_NAME, i);
		}
		public TerminalNode EQUAL() { return getToken(DartParser.EQUAL, 0); }
		public TerminalNode PLUS() { return getToken(DartParser.PLUS, 0); }
		public TerminalNode LIST_NAME() { return getToken(DartParser.LIST_NAME, 0); }
		public TerminalNode OPEN_LIST() { return getToken(DartParser.OPEN_LIST, 0); }
		public TerminalNode I() { return getToken(DartParser.I, 0); }
		public TerminalNode CLOSE_LIST() { return getToken(DartParser.CLOSE_LIST, 0); }
		public TerminalNode SMEI() { return getToken(DartParser.SMEI, 0); }
		public ForBodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_forBody; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).enterForBody(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof DartParserListener ) ((DartParserListener)listener).exitForBody(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof DartParserVisitor ) return ((DartParserVisitor<? extends T>)visitor).visitForBody(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForBodyContext forBody() throws RecognitionException {
		ForBodyContext _localctx = new ForBodyContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_forBody);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(INT_NAME);
			setState(104);
			match(EQUAL);
			setState(105);
			match(INT_NAME);
			setState(106);
			match(PLUS);
			setState(107);
			match(LIST_NAME);
			setState(108);
			match(OPEN_LIST);
			setState(109);
			match(I);
			setState(110);
			match(CLOSE_LIST);
			setState(111);
			match(SMEI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
